Update mavensnippets.md